# BrandonAgent

./: .gitignore
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json
app/BrandonAgent/: main.py  pyproject.toml
app/ComplianceTeam/: README.md  main.py  pyproject.toml
app/ComplianceTeam/mcp_client/: client.py
app/ComplianceTeam/model/: load.py
app/FERPA/: README.md  main.py  pyproject.toml
app/Kap/: README.md  main.py  pyproject.toml
app/Kap/model/: load.py
app/StandardsPartner/: main.py  pyproject.toml
app/StandardsPartner/mcp_client/: client.py
